--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,9 @@ permissions:
 jobs:
   release-build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./plugins/onebot_adapter
 
     steps:
       - uses: actions/checkout@v4
@@ -37,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: onebot-adapter-dists
-          path: dist/
+          path: plugins/onebot_adapter/dist/
 
   pypi-publish:
     runs-on: ubuntu-latest
@@ -61,4 +64,3 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
-          password: ${{ secrets.PYPI_API_TOKEN }}
