fix(ci): Correct working directory path in publish workflow
- Update working directory path from `./plugins/onebot_adapter` to `plugins/onebot_adapter`
- Ensure consistent path specification for OneBot Adapter publish job

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,10 +10,7 @@ permissions:
 jobs:
   release-build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./plugins/onebot_adapter
-
+    
     steps:
       - uses: actions/checkout@v4
 
@@ -40,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: onebot-adapter-dists
-          path: plugins/onebot_adapter/dist/
+          path: dist/
 
   pypi-publish:
     runs-on: ubuntu-latest
