--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,16 @@
-name: Publish OneBot Adapter to PyPI
+name: Build and Publish OneBot Adapter
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: [ main ]
+    tags:
+      - 'v*'  # 匹配 v 开头的 tag
 
 permissions:
-  contents: read
+  contents: write  # 需要写入权限来创建 release
 
 jobs:
-  release-build:
+  build:
     runs-on: ubuntu-latest
     
     steps:
@@ -23,15 +25,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install build wheel
 
-      - name: Get version from tag
-        id: get_version
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-
       - name: Build package
         run: |
           python -m build
-        env:
-          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
@@ -39,12 +35,25 @@ jobs:
           name: onebot-adapter-dists
           path: dist/
 
+      # 当推送 tag 时自动创建 release
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/*
+          generate_release_notes: true
+          draft: false
+          prerelease: false
+
   pypi-publish:
     runs-on: ubuntu-latest
     needs:
-      - release-build
+      - build
     permissions:
       id-token: write
+    
+    # 只在推送 tag 时运行发布任务
+    if: startsWith(github.ref, 'refs/tags/')
     
     environment:
       name: pypi
