--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # 获取所有历史记录和 tags
 
       - uses: actions/setup-python@v5
         with:
@@ -25,14 +27,28 @@ jobs:
           python -m pip install --upgrade pip
           pip install build wheel
 
+      # 从 tag 获取版本号
+      - name: Get version from tag
+        id: get_version
+        run: |
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          else
+            LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+            LATEST_VERSION=${LATEST_TAG#v}
+            echo "RELEASE_VERSION=${LATEST_VERSION}.dev$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
+          fi
+
       - name: Build package
         run: |
           python -m build
+        env:
+          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
         with:
-          name: onebot-adapter-dists
+          name: onebot-adapter-${{ env.RELEASE_VERSION }}
           path: dist/
 
       # 当推送 tag 时自动创建 release
@@ -60,13 +76,20 @@ jobs:
       url: https://pypi.org/p/chatgpt-mirai-qq-bot-onebot-adapter
 
     steps:
+      # 重新获取版本号
+      - name: Get version from tag
+        id: get_version
+        run: |
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
         with:
-          name: onebot-adapter-dists
+          name: onebot-adapter-${{ env.RELEASE_VERSION }}
           path: dist/
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
+          skip-existing: true  # 如果版本已存在则跳过
